landing preview: extend display of commit messages (Bug 1500223).
Summary:
Previously, long commit messages were cut off and the overflow was
hidden. This fix removes the max-height limitation to display the
commit message in full. The overflow property was removed as well,
as it is not necessary with this fix.

Test Plan:
manually ran lando-ui with a mock revision containing
long commit message and saw it was fully displayed.

Reviewers: smacleod

Reviewed By: smacleod

Bug #: 1500223

Differential Revision: https://phabricator.services.mozilla.com/D12705

--- a/landoui/assets_src/css/pages/StackPage.scss
+++ b/landoui/assets_src/css/pages/StackPage.scss
@@ -183,9 +183,7 @@ ul.StackPage-blockers {
     font-size: 1em;
     white-space: pre-wrap;
     height: auto;
-    max-height: 1.25em * 8.5;
     line-height: 1.25em;
-    overflow-y: hidden;
     padding: 0;
     margin-top: 1ch;
     margin-left: 1ch;
